--- a/main.css
+++ b/main.css
@@ -62,7 +62,7 @@ header {
   }
   
   .navigation li {
-    margin-right: 20px;
+    margin-right: 2vw;
     font-size: 15px;
   }
   
@@ -266,6 +266,18 @@ li {
     text-align: center;
   }
 
+  .title {
+    font-size: 3rem;
+  }
+
+  .subtitle {
+    font-size: 4.5vw;
+  }
+
+  .navigation li {
+    font-size: 3vw;
+  }
+
   footer {
     font-size: 2vw;
   }
@@ -294,7 +306,7 @@ li {
   }
 
   nav {
-    margin: 20px 0 0 0;
+    margin: 14px 0 0 0;
   }
 
   .grid-item {
