--- a/main.css
+++ b/main.css
@@ -40,7 +40,7 @@ header {
     margin-top: -1.5rem;
     margin-bottom: 1rem;
     text-align: center;
-    color: #FFFFFF;
+    color: #28B0EF;
 
   }
   
