--- a/main.css
+++ b/main.css
@@ -75,6 +75,9 @@ header {
     text-decoration: none;
     font-family: VCR;
   }
+
+  .navigation playlist {
+    color: #000000;
   
   .navigation a:hover {
     color: #ffffff;
