--- a/main.css
+++ b/main.css
@@ -77,7 +77,7 @@ header {
   }
 
   .navigation .playlist {
-    color: #000000;
+    color: white;
   
   .navigation a:hover {
     color: #ffffff;
